<resources>
    <string name="app_name">THP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profil">Profil</string>
    <string name="title_map">Maps</string>
    <string name="title_drive">Transport</string>
    <string name="title_apartment">Apartment</string>
    <string name="title_forum">Forum</string>
</resources>