<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.thp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_apartment"
        android:name="com.thp.ui.apartment.ApartmentFragment"
        android:label="@string/title_apartment"
        tools:layout="@layout/fragment_apartment" />

    <fragment
        android:id="@+id/navigation_transport"
        android:name="com.thp.ui.transport.TransportFragment"
        android:label="@string/title_drive"
        tools:layout="@layout/fragment_transport" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.thp.ui.forum.ForumFragment"
        android:label="@string/title_forum"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.thp.ui.profil.ProfilFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />
</navigation>